# quickmeme

./: README.md  install.sh  pyproject.toml
extension/: manifest.json  pyproject.toml
extension/server/: main.py
scripts/: vendor.py
src/quickmeme/: __init__.py  catalog.py  cli.py  mcp.py  render.py  share.py
tests/: test_catalog.py  test_render.py
